variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: not found: value n
n=0
^RunFour:2: error: not found: value n
while(n!=4) {
      ^RunFour:5: error: not found: value n
    n=n+1
    ^